src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Conditions__c</fullName>
        <label>Conditions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_paid__c</fullName>
        <label>Invoice paid</label>
        <summaryFilterItems>
            <field>Invoice1__c.Paid__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice1__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>QuoteBeginDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QuoteBillingFrequency__c</fullName>
        <label>Billing Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QuoteEndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QuoteNumber__c</fullName>
        <label>Quote Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuotePaymentMode__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QuotePaymentTime__c</fullName>
        <label>Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 60</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QuoteVersion__c</fullName>
        <label>Quote Version</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>